# RtmpLivePushDemo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  Queue.cpp  Queue.h  RtmpPush.cpp  RtmpPush.h  push.cpp
app/src/main/cpp/librtmp/: rtmp.c
app/src/main/java/com/zzw/live/: LivePushActivity.java  MainActivity.java  RecodeActivity.java
app/src/main/java/com/zzw/live/camera/: CameraHelper.java
app/src/main/java/com/zzw/live/encodec/: BaseMediaEncoder.java  VideoEncodeRecode.java
app/src/main/java/com/zzw/live/rtmp/: OnConntionListener.java  RtmpHelper.java
app/src/main/java/com/zzw/live/rtmp/encoder/: AudioRecorder.java  BasePushEncoder.java  PushEncode.java  VideoPushRender.java
app/src/main/java/com/zzw/live/util/: ByteUtil.java
app/src/main/res/layout/: activity_live_push.xml  activity_main.xml
